Ioi comments